# Complete_Agentic_AI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Libraries/pandas/: intro.ipynb
MCP/: client.py  mathserver.py  mcp_readme.md  weather.py
langchain/: 1-langchaininto.ipynb  2-modelintegration.ipynb  3-tools.ipynb  5-middlewares.ipynb  Self-Learning.ipynb  structured-outputs.ipynb
langgraph/: 1-basic-chatbot.ipynb
langgraph/.ipynb_checkpoints/: 1-basic-chatbot-checkpoint.ipynb
learning-path/: ROAD_TO_AGENTIC_AI.md
